createCrystals function, bootstrap added.

--- a/index.html
+++ b/index.html
@@ -5,15 +5,43 @@
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
-        <h1> Crystal Collector Game</h1>
-        <h2>Number to Guess: <span id="number-to-guess"></span></h2>
-        <h2>Your Score: <span id="score"></span></h2>
-        <h2>Wins: <span id="winsID"></span></h2>
-        <h2>Losses: <span id="lossesID"></span></h2>
-        <div id="crystals">
-
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                <h1> Crystal Collector Game</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <h2>Number to Guess: <span id="number-to-guess"></span></h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                        <h2>Your Score: <span id="score"></span></h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <h2>Wins: <span id="winsID"></span></h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                        <h2>Losses: <span id="lossesID"></span></h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div id="crystals"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+                        <script type="text/javascript" src="assets/javascript/game.js"></script>
+                </div>
+            </div>
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script type="text/javascript" src="assets/javascript/game.js"></script>
     </body>
 </html>
