--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <h4>You will be given a random number at the beginning of the game. There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score. You will win the game by matching your total score to the random number, you lose the game if your total score goes above the random number. The value of each crystal is hidden from you until you click on it. Each time when the game starts, the game will change the values of each crystal.</h4>
+                    <h4>You will be given a random number at the beginning of the game. There are four crystals below.
+                         By clicking on a crystal you will add a specific amount of points to your total score.
+                          You will win the game by matching your total score to the random number, you lose the game if your total score goes above the random number.
+                           The value of each crystal is hidden from you until you click on it. Each time when the game starts, the game will change the values of each crystal.</h4>
                 </div>
                 <div class="col-md-8">
                 </div>
