--- a/index.html
+++ b/index.html
@@ -1,48 +1,74 @@
 <!DOCTYPE html> 
 <html>
     <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-12 text-center">
                     <h1> Crystal Collector Game</h1>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4">
+
+                <div class="col-md-12">
                     <h4>You will be given a random number at the beginning of the game. There are four crystals below.
                          By clicking on a crystal you will add a specific amount of points to your total score.
                           You will win the game by matching your total score to the random number, you lose the game if your total score goes above the random number.
                            The value of each crystal is hidden from you until you click on it. Each time when the game starts, the game will change the values of each crystal.</h4>
                 </div>
-                <div class="col-md-8">
-                </div>
+
             </div>
-            <div class="row">
-                <div class="col-md-4">
+            <div class="row text-center">
+                <div class="col-md-2">
+
+                </div>
+                <div class="col-md-8">
+                    <br>
                     <h2>Number to Guess: <span id="number-to-guess"></span></h2>
                 </div>
+                <div class="col-md-2">
+
+                </div>
             </div>
-            <div class="row">
-                <div class="col-md-4">
+            <div class="row text-center">
+                <div class="col-md-2">
+
+                </div>
+                <div class="col-md-8">
                     <h2>Your Score: <span id="score"></span></h2>
                 </div>
+                <div class="col-md-2">
+
+                </div>
             </div>
-            <div class="row">
-                <div class="col-md-4">
+            <div class="row text-center">
+                <div class="col-md-2">
+
+                </div>
+                <div class="col-md-8">
                     <h2>Wins: <span id="winsID"></span></h2>
                 </div>
+                <div class="col-md-2">
+
+                </div>
             </div>
-            <div class="row">
-                <div class="col-md-4">
-                        <h2>Losses: <span id="lossesID"></span></h2>
+            <div class="row text-center">
+                <div class="col-md-2">
+
+                </div>
+                <div class="col-md-8">
+                    <h2>Losses: <span id="lossesID"></span></h2>
+                </div>
+                <div class="col-md-2">
+
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-12 text-center">
                     <div id="crystals"></div>
                 </div>
             </div>
